--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@primevue/themes": "^4.0.0",
         "chart.js": "3.3.2",
+        "pinia": "^2.2.4",
         "primeicons": "^6.0.1",
         "primevue": "^4.0.0",
         "vue": "^3.4.34",
